# bt-object-placement-is

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
src/algorithms/distance_resolvers/: __init__.py  distance_resolvers_enum.py  geodetic_distance_resolver.py  i_distance_resolver.py  road_network_distance_resolver.py
src/algorithms/placement_efficiency/: __init__.py  i_placement_efficiency_determinator.py  p_eff_adj_pen_determinator.py
src/algorithms/placement_solvers/: __init__.py  adj_pen_placement_algorithm_greedy.py  i_placement_algorithm.py
src/algorithms/pnetwork_builders/: __init__.py  i_plink_builder.py  mst_plink_builder.py
src/data/filesystem/: __init__.py  app_state_service.py  file_copy_service.py
src/data/models/: __init__.py  app_state.py
src/data/utils/: __init__.py  app_state_converter.py
src/models/: __init__.py  placement_network.py  placement_object.py  placement_point.py  placement_point_link.py
src/presentation/: __init__.py  main_layout.py  object_placement_app.py  placement_graph_view_model.py
src/presentation/components/: list_rows.py
src/presentation/config/: constants.py  kivi_config.py
src/presentation/utils/: color_generator.py  id_generator.py  schedulers.py  types_conversion.py  unit_conversion.py
src/presentation/views/: map_view.py
src/road_network/: road_network_provider.py
src/utils/: __init__.py  graph_utils.py
